# pyFreeFEM-ML

./: .gitignore  LICENSE  MANIFEST.in  README.md  multi-array_test.py  pyproject.toml
document/: code_organization.md  shared_memory_implementation_status.md
examples/: topo_opt_example.py
examples/multi_array/: multi_array_io.edp
plugins/: install_plugin.sh
plugins/src/: Makefile  mmap-semaphore.cpp
pyfreefem/: freefem_runner.py  shm_manager.py  test_pyfreefem_original.py
pyfreefem/freefem/: library-communication.edp  mmap_plugin.edp  shm_comm.idp  shm_comm.py  test_pyfreefem.edp  topo_opt_file_shm.edp
pyfreefem_ml/: README.md  __init__.py  file_io.py  freefem_interface.py  plugin_installer.py  setup.py  shm_manager.py
pyfreefem_ml/docs/: README.md  completion_checklist.md  development_plan.md  development_roadmap.md  development_tasks.md  file_io_guide.md  implementation_issues.md  implementation_plan.md  integration_plan.md  requirements.md  requirements_backup.md  usage_examples.md
pyfreefem_ml/examples/: basic_usage.py  matrix_example.py  vector_field_example.py
pyfreefem_ml/examples/file_io/: README.md  __init__.py  file_io_wrapper.py  poisson_file_io.edp
pyfreefem_ml/examples/multi_array/: README.md  __init__.py  multi_array_io.edp  multi_array_io.py
pyfreefem_ml/plugins/: Makefile
pyfreefem_ml/plugins/scripts/samples/: absolute-path.edp  direct-load.edp  hello.edp  path.edp  shm_plugin.edp  simple-array.edp  simple_shm.edp
pyfreefem_ml/plugins/scripts/tests/: array-test.edp  basic-test.edp  basic_mmap_test.edp  env_test.edp  error-handling-test.edp  int-array-test.edp  mmap_test.edp  simple_test.edp  string-test.edp  test-mmap-en.edp  test-mmap-fixed.edp  test-mmap.edp  test-simple.edp  test_script.edp  wsl-path-test.edp
pyfreefem_ml/plugins/src/: double_array_ops.cpp  mmap-semaphore.cpp  shm_implementation.cpp  shm_implementation.hpp
pyfreefem_ml/pyfreefem_ml/: __init__.py  data_converter.py  errors.py  freefem_interface.py  utils.py
pyfreefem_ml/tests/: test_double_array.py  test_freefem_plugin.py  test_int_array.py  test_matrix.py  test_mixed_arrays.py  test_plugin_installer.py  test_pyfreefem.py  test_shared_memory.py
pyfreefem_ml/tests/resources/: shared_memory_test.edp
tests/: test_pyfreefem.py  test_simple_shm.edp  test_simple_shm.py
