[tool.poetry]
name = "pj-to-speedup"
version = "0.1.0"
description = ""
authors = ["T-akkiii <akashi0718@g.ecc.u-tokyo.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
pyfreefem = "^1.1.2"
torch = "^2.2.0"
torchsummary = "^1.5.1"
numpy = {version = "^2.2.0"}
matplotlib = "^3.10.1"
ruff = "^0.8.2"
pyyaml = "^6.0.2"
torchviz = "^0.0.3"
schedulefree = "^1.4"
sysv_ipc = "^1.1.0"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--verbose"
