[tool.poetry]
name = "pyfreefem-ml"
version = "0.1.0"
description = "Python-FreeFEM共有メモリインターフェース"
authors = ["T-akkiii <akashi0718@g.ecc.u-tokyo.ac.jp>"]
readme = "README.md"
packages = [{include = "pyfreefem_ml", from = "pyfreefem_ml"}]

[tool.poetry.dependencies]
python = ">=3.12"
numpy = "^2.2.0"
sysv_ipc = "^1.1.0"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["pyfreefem_ml/tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--verbose"
