[tool.poetry]
name = "pyfreefem-ml"
version = "0.1.0"
description = "Python-FreeFEM共有メモリインターフェース"
authors = ["T-akkiii <akashi0718@g.ecc.u-tokyo.ac.jp>"]
readme = "README.md"
packages = [{include = "pyfreefem_ml"}]

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "^2.2.0"
matplotlib = "^3.10.1"
tabulate = "^0.9.0"
sysv_ipc = {version = "^1.1.0", platform = "linux"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["pyfreefem_ml/tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--verbose"
